Fix fuckin' layout issue.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ a, a:visited, a:hover {
 }
 
 #buddylist {
-  min-width: 200px;
+  width: 200px;
   border-left: 1px solid #BBB;
   vertical-align: top;
 }
@@ -87,6 +87,7 @@ table {
   padding: 0;
   border: 0;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 
 #messagebox {
@@ -101,6 +102,7 @@ table {
 
 #messagebox .scrollr {
   padding-bottom: 2px;
+  word-wrap: break-word;
 }
 
 .author {
